fixed overflow text

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ button#button-mentees {
 }
 
 .constrained{
-  width:500px;
+  width:inherit;
   height:100px;
   overflow-y :scroll;
 }
@@ -184,4 +184,8 @@ button#button-mentees {
 /* Calendar styles */
 .fc-toolbar h2 {
   font-size: 16px;
+}
+
+.picker{
+  width:94.5%;
 }
